--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "body-parser": "~1.4.3",
-    "cloudant": "^1.5.1",
+    "cloudant": "~1.5.1",
     "connect": "2.19.x",
     "error-handler": "~1.0.0",
     "express": "4.4.1",
